--- a/result/docker-compose.test.yml
+++ b/result/docker-compose.test.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: '3'
 
 services:
 
-  sut:
+  test-runner:
     build: ./tests/
     depends_on:
       - vote
@@ -13,7 +13,8 @@ services:
 
   vote:
     build: ../vote/
-    ports: ["80"]
+    ports:
+      - "80:80"
     depends_on:
       - redis
       - db
@@ -23,7 +24,8 @@ services:
 
   result:
     build: .
-    ports: ["80"]
+    ports:
+      - "80:80"
     depends_on:
       - redis
       - db
@@ -41,7 +43,8 @@ services:
 
   redis:
     image: redis:alpine
-    ports: ["6379"]
+    ports:
+      - "6379:6379"
     networks:
       - back-tier
 
