--- a/result/docker-compose.test.yml
+++ b/result/docker-compose.test.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: '2'
 
 services:
 
-  test-runner:
+  sut:
     build: ./tests/
     depends_on:
       - vote
@@ -13,8 +13,7 @@ services:
 
   vote:
     build: ../vote/
-    ports:
-      - "80:80"
+    ports: ["80"]
     depends_on:
       - redis
       - db
@@ -24,8 +23,7 @@ services:
 
   result:
     build: .
-    ports:
-      - "80:80"
+    ports: ["80"]
     depends_on:
       - redis
       - db
@@ -43,8 +41,7 @@ services:
 
   redis:
     image: redis:alpine
-    ports:
-      - "6379:6379"
+    ports: ["6379"]
     networks:
       - back-tier
 
