Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,5 +17,4 @@ steps:
 # A script task making use of 'oc'
   - script: |
       oc project demodevops2
-      oc new-app https://github.com/MazenSiraj/votingApp --context-dir=/vote --name=vote --docker-image=python:latest --labels=app=vote --as-deployment-config=true
-
+      oc new-app https://github.com/MazenSiraj/votingApp --context-dir=/vote --name=vote --image-stream=python --labels=app=vote --as-deployment-config=true --allow-missing-images
