--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -20,3 +20,4 @@ steps:
 
       # Specify the correct Python version in the image stream
       oc new-app https://github.com/MazenSiraj/votingApp --context-dir=/vote --as-deployment-config=true --name=votedevops
+      oc expose service votedevops
